--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = "0.6.1.2" %}
-
+{% set version = '0.6.1.2' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,27 +9,28 @@ package:
 source:
   fn: d3heatmap_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/d3heatmap_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/d3heatmap/d3heatmap_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/d3heatmap_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/d3heatmap/d3heatmap_{{ version }}.tar.gz
   sha256: b3ce5dc60d5668a5a5ad087331d816a6682c92a89d6292788574fecf814491c5
 
 build:
-  number: 0
+  merge_build_host: True  # [win]
+  number: 1
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
     - r-base64enc
     - r-dendextend >=0.18.0
     - r-htmlwidgets
     - r-png
     - r-scales >=0.2.5
-
   run:
     - r-base
     - r-base64enc
@@ -41,7 +41,7 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('d3heatmap')"  # [not win]
+    - $R -e "library('d3heatmap')"           # [not win]
     - "\"%R%\" -e \"library('d3heatmap')\""  # [win]
 
 about:
@@ -52,6 +52,8 @@ about:
     over a cell to show details, drag a rectangle to zoom, and click row/column labels
     to highlight.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
@@ -59,3 +61,5 @@ extra:
     - bgruening
     - daler
     - jdblischak
+    - cbrueffer
+    - dbast
